--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MiPokedex"
         tools:targetApi="31">
         <activity
-            android:name=".activities.DetailsActivity"
+            android:name=".activities.DetailActivity"
             android:exported="false" />
         <activity
             android:name=".activities.ListActivity"
